tests/invalid/dict_items_bool_bool_unsupported/main.py
def run_case() -> None:
    d: dict[bool, bool] = {True: False}
    pairs: list[tuple[bool, bool]] = d.items()

if __name__ == "__main__":
    run_case()
